# sena

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml
commands/: commands.go  download.go  ping.go
handlers/: mistral.go
src/the_fool/: __init__.py  __main__.py  bard.py  config.py  help.py  utils.py
src/the_fool/cogs/: bard.py  downloader.py  gpt.py  llm.py
src/the_fool/utils/: cookies.py  gemini.py
types/: types.go
